<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">

    <Preference
        android:summary="@string/preference_edit_controls_summary"
        android:title="@string/preference_edit_controls_title">
        <intent
            android:action=".CustomControlsActivity"
            android:targetClass="net.kdt.pojavlaunch.CustomControlsActivity"
            android:targetPackage="@string/application_package" />
    </Preference>

    <PreferenceCategory android:title="@string/preference_category_gestures">

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="disableGestures"
            android:summary="@string/mcl_disable_gestures_subtitle"
            android:title="@string/mcl_disable_gestures" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="disableDoubleTap"
            android:summary="@string/mcl_disable_swap_hand_subtitle"
            android:title="@string/mcl_disable_swap_hand" />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="timeLongPressTrigger"
            android:summary="@string/mcl_setting_subtitle_longpresstrigger"
            android:title="@string/mcl_setting_title_longpresstrigger"
            app2:seekBarIncrement="10"
            app2:selectable="false"
            app2:showSeekBarValue="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_buttons">

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="buttonscale"
            android:summary="@string/mcl_setting_subtitle_buttonscale"
            android:title="@string/mcl_setting_title_buttonscale"
            app2:seekBarIncrement="5"
            app2:selectable="false"
            app2:showSeekBarValue="true" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="buttonAllCaps"
            android:summary="@string/mcl_setting_subtitle_buttonallcaps"
            android:title="@string/mcl_setting_title_buttonallcaps" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_virtual_mouse">

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="mousescale"
            android:summary="@string/mcl_setting_subtitle_mousescale"

            android:title="@string/mcl_setting_title_mousescale"
            app2:seekBarIncrement="5"
            app2:selectable="false"
            app2:showSeekBarValue="true" />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="mousespeed"
            android:summary="@string/mcl_setting_subtitle_mousespeed"
            android:title="@string/mcl_setting_title_mousespeed"
            app2:seekBarIncrement="5"
            app2:selectable="false"
            app2:showSeekBarValue="true" />
        <SwitchPreference
            android:key="mouse_start"
            android:summary="@string/preference_mouse_start_description"
            android:title="@string/preference_mouse_start_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="gyroCategory"
        android:title="@string/preference_category_gyro_controls">
        <SwitchPreference
            android:key="enableGyro"
            android:summary="@string/preference_enable_gyro_description"
            android:title="@string/preference_enable_gyro_title" />
        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="gyroSensitivity"
            android:summary="@string/preference_gyro_sensitivity_description"
            android:title="@string/preference_gyro_sensitivity_title"
            app2:seekBarIncrement="5"
            app2:selectable="false"
            app2:showSeekBarValue="true" />
        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="gyroSampleRate"
            android:summary="@string/preference_gyro_sample_rate_description"
            android:title="@string/preference_gyro_sample_rate_title"
            app2:selectable="false"
            app2:showSeekBarValue="true" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="gyroSmoothing"
            android:summary="@string/preference_gyro_smoothing_description"
            android:title="@string/preference_gyro_smoothing_title" />
        <SwitchPreference
            android:key="gyroInvertX"
            android:summary="@string/preference_gyro_invert_x_axis_description"
            android:title="@string/preference_gyro_invert_x_axis" />
        <SwitchPreference
            android:key="gyroInvertY"
            android:summary="@string/preference_gyro_invert_y_axis_description"
            android:title="@string/preference_gyro_invert_y_axis" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_controller_settings">
        <net.kdt.pojavlaunch.prefs.GamepadRemapPreference
            android:summary="@string/preference_wipe_controller_description"
            android:title="@string/preference_wipe_controller_title" />
        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="gamepad_deadzone_scale"
            android:summary="@string/preference_deadzone_scale_description"
            android:title="@string/preference_deadzone_scale_title"
            app2:seekBarIncrement="5"
            app2:showSeekBarValue="true" />
    </PreferenceCategory>


</PreferenceScreen>