<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_20sdp"
        android:paddingTop="@dimen/_10sdp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/title"
            android:text="@string/rename"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.mio.ui.EditText
            android:id="@+id/edit"
            android:singleLine="true"
            android:maxLines="1"
            android:background="@drawable/background_button_normal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/_10sdp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <com.mio.ui.PressScaleButton
            android:id="@+id/confirm"
            android:text="@string/confirm"
            app:layout_constraintTop_toBottomOf="@id/edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cancle"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.mio.ui.PressScaleButton
            android:id="@+id/cancle"
            android:text="@string/global_cancel"
            app:layout_constraintTop_toBottomOf="@id/edit"
            app:layout_constraintStart_toEndOf="@id/confirm"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
