<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="com.mio.ui.adapters.FilePickAdapter" />

        <variable
            name="adapter"
            type="FilePickAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/background_normal">

        <TextView
            android:id="@+id/current_path"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_2sdp"
            android:text="@{adapter.currentPath}"
            android:textColor="?attr/themeColorSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/view"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_2sdp"
            app:layout_constraintWidth_percent="0.7"
            android:adapter="@{adapter}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_path" />

        <View
            android:id="@+id/view"
            app:layout_constraintStart_toEndOf="@id/recycler_view"
            app:layout_constraintEnd_toStartOf="@id/private_dir"
            style="@style/ThickDivider"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

        <com.mio.ui.PressScaleButton
            android:id="@+id/private_dir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/private_dir"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/view"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.mio.ui.PressScaleButton
            android:id="@+id/external_dir"
            android:padding="@dimen/_5sdp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/external_storage_dir"
            app:layout_constraintStart_toEndOf="@id/view"
            app:layout_constraintTop_toBottomOf="@id/private_dir"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.mio.ui.PressScaleButton
            android:id="@+id/create_folder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/folder_fragment_create"
            app:layout_constraintTop_toBottomOf="@id/external_dir"
            app:layout_constraintStart_toEndOf="@id/view"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.mio.ui.PressScaleButton
            android:id="@+id/select_folder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/folder_fragment_select"
            app:layout_constraintStart_toEndOf="@id/view"
            app:layout_constraintTop_toBottomOf="@id/create_folder"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
